--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: ${DB_NAME:-fouka_db}
-      POSTGRES_USER: ${DB_USER:-fouka_user}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-fouka_password}
+      POSTGRES_DB: ${DB_NAME:fouka_db}
+      POSTGRES_USER: ${DB_USER:fouka_user}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:6666}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-fouka_user}"]
       interval: 10s
