--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ DB_PASSWORD=6666
 DB_HOST=db
 DB_PORT=5432
 
-CORS_ALLOWED_ORIGINS=http://localhost,http://91.107.169.179/
+CORS_ALLOWED_ORIGINS=http://localhost,http://91.107.169.179
