--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 services:
-  db:
-    image: postgres:14-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: ${DB_NAME:-fouka_db}
-      POSTGRES_USER: ${DB_USER:-fouka_user}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-fouka_password}
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-fouka_user}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    restart: unless-stopped
+  # db:
+  #   image: postgres:14-alpine
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data
+  #   environment:
+  #     POSTGRES_DB: ${DB_NAME:-fouka_db}
+  #     POSTGRES_USER: ${DB_USER:-fouka_user}
+  #     POSTGRES_PASSWORD: ${DB_PASSWORD:-fouka_password}
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-fouka_user}"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
+  #   restart: unless-stopped
 
   backend:
     build:
@@ -26,13 +26,13 @@ services:
     environment:
       - DEBUG=${DEBUG:-False}
       - SECRET_KEY=${SECRET_KEY:-django-insecure--$g-e%io^a4vhd3-1t8=(2ij#%#kk5s!yjkg=s&5bt_zoroxls}
-      - DB_NAME=${DB_NAME:-fouka_db}
-      - DB_USER=${DB_USER:-fouka_user}
-      - DB_PASSWORD=${DB_PASSWORD:-fouka_password}
+      - DB_NAME=${DB_NAME:fouka_db}
+      - DB_USER=${DB_USER:fouka_user}
+      - DB_PASSWORD=${DB_PASSWORD:fouka_password}
       - DB_HOST=db
       - DB_PORT=5432
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS:-localhost,127.0.0.1}
-      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-http://localhost}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS:localhost,127.0.0.1}
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:http://localhost}
     depends_on:
       db:
         condition: service_healthy
